--- a/app/src/main/res/layout/app_bar_main.xml
+++ b/app/src/main/res/layout/app_bar_main.xml
@@ -17,7 +17,7 @@
             android:layout_height="?attr/actionBarSize"
             android:background="@color/colorPrimaryDark"
             app:popupTheme="@style/AppTheme.PopupOverlay"
-            app:titleTextColor="@color/whiteColor"/> />
+            app:titleTextColor="@color/whiteColor"/>
 
     </android.support.design.widget.AppBarLayout>
 
