--- a/app/src/main/res/layout/fragment_view_bookings.xml
+++ b/app/src/main/res/layout/fragment_view_bookings.xml
@@ -5,10 +5,45 @@
     android:layout_height="match_parent"
     tools:context=".Fragments.ViewBookingsFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+                <TextView
+                    android:id="@+id/eventTV"
+                    android:layout_width="@dimen/edit_text_width"
+                    android:layout_height="wrap_content"
+                    android:layout_centerHorizontal="true"
+                    android:layout_marginTop="5dp"
+                    android:text="@string/events_txt"/>
+                <TextView
+                    android:id="@+id/dateTV"
+                    android:layout_width="@dimen/edit_text_width"
+                    android:layout_height="wrap_content"
+                    android:layout_centerHorizontal="true"
+                    android:layout_marginTop="5dp"
+                    android:layout_below="@id/eventTV" />
+                <TextView
+                    android:id="@+id/timeTV"
+                    android:layout_width="@dimen/edit_text_width"
+                    android:layout_height="wrap_content"
+                    android:layout_centerHorizontal="true"
+                    android:layout_marginTop="5dp"
+                    android:layout_below="@id/dateTV" />
+                <TextView
+                    android:id="@+id/charityTV"
+                    android:layout_width="@dimen/edit_text_width"
+                    android:layout_height="wrap_content"
+                    android:layout_centerHorizontal="true"
+                    android:layout_below="@id/timeTV"
+                    android:layout_marginTop="5dp" />
+                <TextView
+                    android:id="@+id/userTV"
+                    android:layout_width="@dimen/edit_text_width"
+                    android:layout_height="wrap_content"
+                    android:layout_centerHorizontal="true"
+                    android:layout_marginTop="5dp"
+                    android:layout_below="@id/charityTV" />
+        </RelativeLayout>
 
 </FrameLayout>
