--- a/app/src/main/res/layout/fragment_view_bookings.xml
+++ b/app/src/main/res/layout/fragment_view_bookings.xml
@@ -5,45 +5,29 @@
     android:layout_height="match_parent"
     tools:context=".Fragments.ViewBookingsFragment">
 
-        <RelativeLayout
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:elevation="10dp"
+        android:padding="3dp"
+        android:background="#fff"
+        android:focusable="true"
+        android:focusableInTouchMode="true"
+        android:fitsSystemWindows="true"
+        android:orientation="vertical">
+        <ListView
+            android:id="@+id/list_view"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
-
-                <TextView
-                    android:id="@+id/eventTV"
-                    android:layout_width="@dimen/edit_text_width"
-                    android:layout_height="wrap_content"
-                    android:layout_centerHorizontal="true"
-                    android:layout_marginTop="5dp"
-                    android:text="@string/events_txt"/>
-                <TextView
-                    android:id="@+id/dateTV"
-                    android:layout_width="@dimen/edit_text_width"
-                    android:layout_height="wrap_content"
-                    android:layout_centerHorizontal="true"
-                    android:layout_marginTop="5dp"
-                    android:layout_below="@id/eventTV" />
-                <TextView
-                    android:id="@+id/timeTV"
-                    android:layout_width="@dimen/edit_text_width"
-                    android:layout_height="wrap_content"
-                    android:layout_centerHorizontal="true"
-                    android:layout_marginTop="5dp"
-                    android:layout_below="@id/dateTV" />
-                <TextView
-                    android:id="@+id/charityTV"
-                    android:layout_width="@dimen/edit_text_width"
-                    android:layout_height="wrap_content"
-                    android:layout_centerHorizontal="true"
-                    android:layout_below="@id/timeTV"
-                    android:layout_marginTop="5dp" />
-                <TextView
-                    android:id="@+id/userTV"
-                    android:layout_width="@dimen/edit_text_width"
-                    android:layout_height="wrap_content"
-                    android:layout_centerHorizontal="true"
-                    android:layout_marginTop="5dp"
-                    android:layout_below="@id/charityTV" />
-        </RelativeLayout>
+            android:layout_height="wrap_content">
+        </ListView>
+        <Button
+            android:id="@+id/delete"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="5dp"
+            android:text="Delete"
+            android:layout_below="@+id/list_view"
+            android:layout_gravity="center_horizontal"/>
+    </LinearLayout>
 
 </FrameLayout>
